logs/yupp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yupp'...
Listing './lib/python3.5/site-packages/yupp/eg'...
Listing './lib/python3.5/site-packages/yupp/lib'...
Compiling './lib/python3.5/site-packages/yupp/yugen.py'...
***   File "./lib/python3.5/site-packages/yupp/yugen.py", line 847
    raise e_type, 'ps_import: %s' % ( e ) + lib.loc(), tb
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yupp/yup.py'...
***   File "./lib/python3.5/site-packages/yupp/yup.py", line 408
    print PP_I, PP_FILE % fn
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/yupp-1.0rc5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
